feat: duration schema
